# ElectricalMesurements

./: .gitignore  Cargo.toml  README.md  licence.txt
src/: circuits.rs  lib.rs  macros.rs  main.rs  units.rs
src/circuits/: ac_circuit.rs  circuit.rs  components.rs  dc.rs  dc_circuit.rs  dc_math.rs  dc_parallel.rs  dc_series.rs  parallel.rs  series.rs  voltage.rs
src/macros/: dataTypeMacro.rs
src/units/: Amp.rs  Ohm.rs  Volt.rs  Watt.rs  ac_cross_unit_math.rs  amp.rs  cross_unit_math.rs  dc_cross_unit_math.rs  farad.rs  henry.rs  hertz.rs  ohm.rs  ohms_law.rs  seconds.rs  siemens.rs  volt.rs  watt.rs
